implement a basic route feature
it's possible to change a page with local url
you can do this simply with jSponsor.router.location( ) API

--- a/sample/components/package.html
+++ b/sample/components/package.html
@@ -1,12 +1,13 @@
 
 <script>
-    // 개발자들이 매 번 이렇게 package.html을 만들어서 정의하고 모아줘야 하나?
-    // 이 것도 일종의 반복되는 코드이긴한데... fw이 책임져야할 부분이라기 보단
-    // project에서 file import 관리 부분이라 생각하면 될 것 같기도 하다.
+    /*
+     * Define package and enumerate components that are bundled up
+     */
     jSponsor.package('testPackage', []);
 </script>
 
 <link rel="import" href="view/table.html">
 <link rel="import" href="view/main.html">
+<link rel="import" href="view/second.html">
 <script type="text/javascript" src="service/service.js"></script>
 <script type="text/javascript" src="controller/controller.js"></script>
