--- a/sample/components/view/main.html
+++ b/sample/components/view/main.html
@@ -12,6 +12,7 @@
         <ul js-loop="text in order.list">
             <li>{{text}}<span>{{sub}}</span> {{user.getAge() + 1 + ' years old'}}</li>
         </ul>
+        <!-- TODO: add event binding on the dom attribute-->
         <button>destroy</button>
         <div id="tab">
             <my-table></my-table>
