--- a/sample/components/view/second.html
+++ b/sample/components/view/second.html
@@ -8,6 +8,7 @@
     </style>
     <div>
         <label>{{title}}</label>
+        <button js-click="movePage()">prev page</button>
     </div>
 </template>
 
