update the sample UI code
update UI with http and socket events

--- a/sample/components/view/main.html
+++ b/sample/components/view/main.html
@@ -12,6 +12,7 @@
         <ul js-loop="text in order.list">
             <li>{{text}}<span>{{sub}}</span> {{user.getAge() + 1 + ' years old'}}</li>
         </ul>
+        <label>socket message counting : {{count}}</label>
         <!-- TODO: add event binding on the dom attribute-->
         <button js-click="movePage()">next page</button>
     </div>
